Weight of Search doesn't provide Desired Result on Top #113563

Closed
opened 2023-10-11 22:52:38 +02:00 by Gerstmann Bradley · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.61

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-09 15:02, hash: f54205cfdd11

Short description of error
I used to think "Path" was causing the issue, but in fact even if I put lots of ZZZZZZ, it still occurs, etc.
note this is also not related to "recent search item".

Steps to Reproduce

  • Create node group named "some index"
  • search and Add this node group nodetree
  • Now search for "index" query
3.6 4.0
image image
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.61 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-09 15:02, hash: `f54205cfdd11` **Short description of error** I used to think "Path" was causing the issue, but in fact even if I put lots of ZZZZZZ, it still occurs, etc. note this is also not related to "recent search item". **Steps to Reproduce** - Create node group named "some index" - search and Add this node group nodetree - Now search for "index" query | 3.6 | 4.0 | | -- | -- | | ![image](/attachments/33d896cf-c9a3-47d9-9541-033bee1ebba5) | ![image](/attachments/2167206b-f1c8-44bd-a9ac-503ebef46c6d) |
Gerstmann Bradley added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-10-11 22:52:39 +02:00
Member

Hi, thanks for the report. I can confirm. After 046155572d, last searched results are considered when query is short (~1 letter).
But this seems to be still failing in case of "groups"
cc @JacquesLucke

Hi, thanks for the report. I can confirm. After 046155572daa1bb0bf6f2d76005ec5002ce733b0, last searched results are considered when query is short (~1 letter). But this seems to be still failing in case of "groups" cc @JacquesLucke
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-13 10:01:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113563
No description provided.