source/blender/blenlib/intern/string_search.cc
@@ -479,10 +479,19 @@ void StringSearchBase::add_impl(const StringRef str, void *user_data, const int 
                               recent_cache_->logical_time_by_str.lookup_default(str, -1) :
                               -1;
   const int main_group_id = word_group_ids.is_empty() ? 0 : word_group_ids.last();
+
+  int main_group_length = 0;
+  for (const int i : words.index_range()) {
+    if (word_group_ids[i] == main_group_id) {
+      main_group_length += int(words[i].size());
+    }
+  }
+
   items_.append({user_data,
                  allocator_.construct_array_copy(words.as_span()),
                  allocator_.construct_array_copy(word_group_ids.as_span()),
                  main_group_id,
+                 main_group_length,
                  int(str.size()),
                  weight,
                  recent_time});
@@ -531,7 +540,12 @@ Vector<void *> StringSearchBase::query_impl(const StringRef query) const
          * looking for. This also ensures that exact matches will be at the top, even if the query
          * is a sub-string of another item. */
         std::sort(indices.begin(), indices.end(), [&](int a, int b) {
-          return items_[a].length < items_[b].length;
+          const SearchItem &item_a = items_[a];
+          const SearchItem &item_b = items_[b];
+          /* The length of the main group has priority over the total length. */
+          return item_a.main_group_length < item_b.main_group_length ||
+                 (item_a.main_group_length == item_b.main_group_length &&
+                  item_a.total_length < item_b.total_length);
         });
         /* Prefer items with larger weights. Use `stable_sort` so that if the weights are the same,
          * the order won't be changed. */
